========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-11-20

  - Fixed bugs in bean-format; in order to do this properly I made bean-format
    reuse the globally defined regular expressions for currency and account in
    the rest of Beancount's code. This makes bean-format depend on the Beancount
    installation. Bah, it's reasonable. This issue is related to issue #146.

  - Added ANY_META() function to the SQL shell's environment; ANY_META() allows
    you to query a posting's metadata, falling back on the parent entry's
    metadata. This idea was suggested by Stefano Zacchiroli in
    https://groups.google.com/d/msg/beancount/jh-n4rvbQAI/Hz5Mmd60BAAJ. I also
    added the first unit tests for environment functions--I'll have to write all
    of those at some point.

  - Made unsupported cost specifications in the SIMPLE booking algorithm issue
    an appropriate error. For example, instead of just ignoring the cost spec in
    this:

          2014-10-15 * "buy widgets"
            Assets:Inventory     10 WIDGET {} ;; Not supported.
            Assets:Cash         -80 GBP

    It will issue an error. See
    https://groups.google.com/d/msg/beancount/9NBcT-SXZMQ/sy7Z3dIdBQAJ for
    context.


2016-11-12

  - Made the Emacs prefix key configurable via a new beancount-mode-map-prefix
    variable. See discussion here:
    https://groups.google.com/d/msg/beancount/_7TscZ9phNE/K8PkcRMpBAAJ


2016-11-06

  - Fixed #139: Full booking parsing had been more liberal than the old SIMPLE
    booking algorithm can interpret. In the old code, explicitly disallow some
    interpolation cases which cannot be handled.

  - Fixed #129: Ignore custom directives for Ledger and HLedger conversion.


2016-11-05

  - Fixed #142: bean-check should return non-zero exit code upon failure.


2016-10-30

  - Merge the current version of the 'booking' branch and made the "FULL" booking